Added params to author shelf to make controller show up.
Former-commit-id: aca53434f9f2ed5314343d9d2b34a02b9bf6ae2f
Former-commit-id: 4ab6ee9bc5958636ff9a574ab848ec6921a1e9c9
Former-commit-id: 933e5ca2622096a67716d23f73b3f5a20b30c442
Former-commit-id: 82d7efa23d5978ad87ce6a445680d15ae4227291
Former-commit-id: 51ba458d84fa60ad51e44e11744a406348860dcc
Former-commit-id: 3b6dca22081a3bd38d0dd9822fe40c31e4f36c19

--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -56,7 +56,6 @@
     </div>
 </div>
 <br style="clear:both;">
-Test:<span class="pb-shelf-controller" dojoType="dijit.layout.StackController" containerId="authorShelf"></span>
 <div class="pb-shelf">
     <div class="pb-shelf-left-arrow" onclick="dijit.byId('authorShelf').forward();">
     </div>
@@ -69,7 +68,7 @@ Test:<span class="pb-shelf-controller" dojoType="dijit.layout.StackController" c
         {% for title in contributor_list.title_set.all|slice:":6" %}
         {% if forloop.first %}
         <div dojoType="pbwidgets.book_shelf.BookShelf" id="authorShelf">
-            <div dojoType="dijit.layout.ContentPane" title="1">
+            <div dojoType="dijit.layout.ContentPane" showLabel="false" iconClass="pb-shelf-controller-icon" label="Author Bookshelf, Page 1">
                 {% endif %}
                 <div class="pb-shelf-item">
                     <img class="pb-shelf-item-cover-image" src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="67" height="99"/><img class="pb-shelf-item-preview-icon" src="{{ MEDIA_URL }}themes/tim1/images/pb-preview-icon.png" width="63" height="19" onlick="Preview Placeholder"/>
@@ -90,7 +89,7 @@ Test:<span class="pb-shelf-controller" dojoType="dijit.layout.StackController" c
                 </div>
                 {% ifequal forloop.counter 3 %}
             </div>
-            <div dojoType="dijit.layout.ContentPane" title="2" style="opacity:0">
+            <div dojoType="dijit.layout.ContentPane" style="opacity:0" showLabel="false" iconClass="pb-shelf-controller-icon" label="Author Bookshelf, Page 1">
                 {% endifequal %}
                 {% if forloop.last  %}
             </div>
