--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -33,7 +33,7 @@
 </script>
 {% block head %}{% endblock %}
 </head>
-<body {% block bodyid %}{% endblock %}{% block bodyclass %}{% endblock %}">
+<body {% block bodyid %}{% endblock %}{% block bodyclass %}class="pb-body"{% endblock %}">
 {% block sitedivopen %}<div id="site">{% endblock %}
 {% block header %}{% include "header.html" %}{% endblock %}
 {% block contentdivopen %}<div id="content">{% endblock %}
