Centered body with auto margins; added footer background (too light).
Former-commit-id: 43c1b1219979a5c86aed3678ab36096224510245
Former-commit-id: a4b4926ac9479b9199110909d8d36f841e094655
Former-commit-id: 5c761f7913997996a3c815a440ed1f4acb57cada
Former-commit-id: a640bfaad3f4d121aa31d68f8733da63c1aa0319
Former-commit-id: 421843c7c290c221cf955e361b223c36ca27f38d
Former-commit-id: 60286d500623ab1406d2bfbf515ad5687c962ae1

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -4,9 +4,28 @@
 	width: 995px;
 }
 
+#pb-footer-background {
+	background: url(../images/pb-footer-background.jpg) repeat-x #fff;
+	height: 100px;
+	width: 995px;
+}
+
+#pb-footer-text {
+	font-family: Verdana, Arial, sans-serif;
+	font-size: 11px;
+	color: #3a79b7;
+	width: 995px;
+	text-align: center;
+	line-height: 18px;
+	margin-top: 20px;
+}
+
 .pb-body {
 	background: url(../images/pb-background.jpg) repeat-x #fff;
-	margin: 0 30px 0 30px;
+	margin: 0px auto;
+	font-family: Verdana, Arial, sans-serif;
+	color: #3a79b7;
+	width: 995px;
 }
 
 .pb-shelf {
@@ -15,6 +34,7 @@
 	font-family: Verdana, Arial, sans-serif;
 	font-size: 11px;
 	color: #000;
+	text-align: left;
 }
 
 .pb-shelf-left-arrow {
@@ -109,6 +129,8 @@
 	top: 13px;
 	left: 93px; 
 	margin-right: 10px;
+	white-space: normal;
+	text-align: left;
 }
 
 .pb-shelf-item-title {
