--- a/src/podiobooks/templates/themes/tim1/footer.html
+++ b/src/podiobooks/templates/themes/tim1/footer.html
@@ -1,8 +1,15 @@
-<!-- Footer --> 
+<!-- Footer -->
 <div id="footer">
-	<!--Footer-->
-</div> 
-{% if debug %}
-<!-- STATS: Total: %(totTime).2f Python: %(pyTime).2f DB: %(dbTime).2f Queries: %(queries)d -->
-{% endif %}
+    <div id="pb-footer-background">
+        <div id="pb-footer-text">
+            FAQ | Authors | Privacy and Legal | Blog | Promos and Banners | Community
+            <br>
+            <div style="font-weight:bold; font-size: 12px;">Send us Feedback | Report a Problem | Donations</div>
+            <br>
+            Text and Layout Copyright &copy; 2005-2009 Podiobooks.com. All rights reserved.
+            <br>
+            See legal notes for audio file rights.
+        </div>
+    </div>
+</div>
 <!-- End Footer -->
