Moved shelf out into a tag.  Added TypeKit to base.html to pull in specialty font.  CSS Cleanup.  Added TEMPLATE_MEDIA_URL to settings.
Former-commit-id: 2b53cc223784ef0a6a8c10bdd2d37dc2ba85bc3f
Former-commit-id: 033c0195c7273f7919afd0777e3b93fa65cbd457
Former-commit-id: 727d856e08beecdfe801bc38ec5d9cc1af0b8cf3
Former-commit-id: 638af3b675c3ec1846dc303bcaa0ff7f28a6a608
Former-commit-id: 29187dc1c4a1f854a924a731505136e20591443a
Former-commit-id: 57102d484ba49f061a4ae0d550e87fe2d0e68841

--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -31,6 +31,8 @@
 </script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js">
 </script>
+<script type="text/javascript" src="http://use.typekit.com/coc0qsu.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 {% block head %}{% endblock %}
 </head>
 <body {% block bodyid %}{% endblock %}{% block bodyclass %}class="pb-body"{% endblock %}">
