--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -1,105 +1,8 @@
 {% extends "base.html" %}
 {% load main_templatetags %}
 {% load title_templatetags %}
-{% block head %}
-<style type="text/css">
-</style>
-<script type="text/javascript">
-    dojo.require("pbwidgets.book_shelf.BookShelf");
-</script>
-{% endblock %}
-{% block title %}{% endblock %}
 {% block content %}
-<div class="pb-shelf">
-    <div class="pb-feature-shelf-left-arrow" onclick="dijit.byId('featureShelf').forward();">
-    </div>
-    <div class="pb-feature-shelf-middle">
-        <div class="pb-shelf-titlebar">
-            Featured Podiobooks
-			<span class="pb-shelf-controller" dojoType="dijit.layout.StackController" containerId="featureShelf"></span>
-        </div>
-        {% if title_list %}
-        {% for title in title_list|slice:":8" %}
-        {% if forloop.first %}
-        <div dojoType="pbwidgets.book_shelf.BookShelf" id="featureShelf" doLayout="false">
-            <div dojoType="dijit.layout.ContentPane" showLabel="false" iconClass="pb-shelf-controller-icon" label="Featured Bookshelf, Page 1">
-                {% endif %}
-                <div class="pb-shelf-item">
-                    <img class="pb-shelf-item-cover-image" src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="67" height="99"/><img class="pb-shelf-item-preview-icon" src="{{ MEDIA_URL }}themes/tim1/images/pb-preview-icon.png" width="63" height="19" onlick="Preview Placeholder"/>
-                    <div class="pb-shelf-item-text">
-                        <p class="pb-shelf-item-title">
-                            {{ title.name|truncatewords_html:8 }}
-                        </p>
-                        <p class="pb-shelf-item-contributors">
-                            {% show_contributors title %}
-                        </p>
-                        <p class="pb-shelf-item-categories">
-                            in <span style="color: #0054a6">{% show_categories title %}</span>
-                        </p>
-                        <p class="pb-shelf-item-tags">
-                            {% autoescape off %}{{ title.description|striptags|truncatewords_html:15 }}{% endautoescape %}
-                        </p>
-                    </div>
-                </div>
-                {% ifequal forloop.counter 4 %}
-            </div>
-            <div dojoType="dijit.layout.ContentPane" style="opacity:0"  showLabel="false" iconClass="pb-shelf-controller-icon" label="Featured Bookshelf, Page 2">
-                {% endifequal %}
-                {% if forloop.last  %}
-            </div>
-        </div>
-        {% endif %}
-        {% endfor %}
-        {% endif %}
-    </div>
-    <div class="pb-feature-shelf-right-arrow" onclick="dijit.byId('featureShelf').forward();">
-    </div>
-</div>
-<br style="clear:both;">
-<div class="pb-shelf">
-    <div class="pb-shelf-left-arrow" onclick="dijit.byId('authorShelf').forward();">
-    </div>
-    <div class="pb-shelf-middle">
-        <div class="pb-shelf-titlebar">
-            Author Spotlight: {{ contributor_list.display_name }}
-			<span class="pb-shelf-controller" dojoType="dijit.layout.StackController" containerId="authorShelf"></span>
-        </div>
-        {% if contributor_list %}
-        {% for title in contributor_list.title_set.all|slice:":6" %}
-        {% if forloop.first %}
-        <div dojoType="pbwidgets.book_shelf.BookShelf" id="authorShelf">
-            <div dojoType="dijit.layout.ContentPane" showLabel="false" iconClass="pb-shelf-controller-icon" label="Author Bookshelf, Page 1">
-                {% endif %}
-                <div class="pb-shelf-item">
-                    <img class="pb-shelf-item-cover-image" src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" width="67" height="99"/><img class="pb-shelf-item-preview-icon" src="{{ MEDIA_URL }}themes/tim1/images/pb-preview-icon.png" width="63" height="19" onlick="Preview Placeholder"/>
-                    <div class="pb-shelf-item-text">
-                        <p class="pb-shelf-item-title">
-                            {{ title.name|truncatewords_html:8 }}
-                        </p>
-                        <p class="pb-shelf-item-contributors">
-                            {% show_contributors title %}
-                        </p>
-                        <p class="pb-shelf-item-categories">
-                            in <span style="color: #0054a6">{% show_categories title %}</span>
-                        </p>
-                        <p class="pb-shelf-item-tags">
-                            {% autoescape off %}{{ title.description|striptags|truncatewords_html:15 }}{% endautoescape %}
-                        </p>
-                    </div>
-                </div>
-                {% ifequal forloop.counter 3 %}
-            </div>
-            <div dojoType="dijit.layout.ContentPane" style="opacity:0" showLabel="false" iconClass="pb-shelf-controller-icon" label="Author Bookshelf, Page 1">
-                {% endifequal %}
-                {% if forloop.last  %}
-            </div>
-        </div>
-        {% endif %}
-        {% endfor %}
-        {% endif %}
-    </div>
-    <div class="pb-shelf-right-arrow" onclick="dijit.byId('authorShelf').forward();">
-    </div>
-</div>
-<br style="clear:both;">
+{% show_shelf 'featuredPodiobooksShelf' 'Featured Podiobooks' title_list '' '' 'pb-feature-shelf' 4 %}
+<div class="pb-adstrip">Google Ads Placeholder&nbsp;&nbsp;&nbsp;&nbsp;Google Ads Placeholder&nbsp;&nbsp;&nbsp;&nbsp;Google Ads Placeholder&nbsp;&nbsp;&nbsp;&nbsp;</div>
+{% show_shelf 'authorSpotlightShelf' 'Author Spotlight - Mur Lafferty' contributor_title_list '' '' 'pb-shelf' 3 %}
 {% endblock %}
