--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -1,3 +1,11 @@
+.pb-float-clear {
+	clear: both;
+	margin: 0;
+	padding: 0;
+	height: 0;
+	width: 0;
+}
+
 #pb-header-background {
 	background: url(../images/pb-header.jpg) no-repeat;
 	height: 219px;
@@ -11,7 +19,6 @@
 }
 
 #pb-footer-text {
-	font-family: Verdana, Arial, sans-serif;
 	font-size: 11px;
 	width: 995px;
 	text-align: center;
@@ -27,7 +34,7 @@
 .pb-body {
 	background: url(../images/pb-background.jpg) repeat-x #fff;
 	margin: 0px auto;
-	font-family: Verdana, Arial, sans-serif;
+	font-family: "lemonde-sans-1","lemonde-sans-2","Verdana","Arial",sans-serif;
 	width: 995px;
 	color: #464646;
 }
@@ -43,7 +50,6 @@
 .pb-shelf {
 	position: relative;
 	margin-bottom: 10px;
-	font-family: Verdana, Arial, sans-serif;
 	font-size: 11px;
 	text-align: left;
 }
@@ -77,7 +83,6 @@
 	font-size: 22px;
 	color: #fff;
 	vertical-align: top;
-	font-stretch: condensed;
 }
 
 .pb-shelf-controller {
@@ -190,33 +195,81 @@
 .pb-feature-shelf {
 	position: relative;
 	height: 230px;
-	width: 970px;
+	width: 995px;
 	margin-bottom: 10px;
-	font-family: Verdana, Arial, sans-serif;
 	font-size: 11px;
 	color: #000;
 }
 
-.pb-feature-shelf-left-arrow {
-	float: left;
+.pb-feature-shelf .pb-shelf-left-arrow {
 	height: 230px;
 	width: 20px;
 	background: url(../images/pb-shelfbox-dark-ends.png) bottom left no-repeat;
-	cursor: pointer;
 }
 
-.pb-feature-shelf-middle {
-	float: left;
+.pb-feature-shelf .pb-shelf-middle {
 	height: 230px;
 	width:  955px;
 	padding-top: 6px;
 	background: url(../images/pb-shelfbox-dark-middle.png) repeat-x;
 }
 
-.pb-feature-shelf-right-arrow {
-	float: left;
+.pb-feature-shelf .pb-shelf-right-arrow {
 	height: 230px;
 	width: 20px;
 	background: url(../images/pb-shelfbox-dark-ends.png) bottom right no-repeat;
-	cursor: pointer;
+}
+
+.pb-adstrip {
+	font-size: 10px;
+	margin: 0 0 15px 10px;
+	text-align: center;
+}
+
+/* clear the styles */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+}
+body {
+	line-height: 1;
+	color: black;
+	background: white;
+}
+ol, ul {
+	list-style: none;
+}
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: separate;
+	border-spacing: 0;
+}
+caption, th, td {
+	text-align: left;
+	font-weight: normal;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: "";
+}
+blockquote, q {
+	quotes: "" "";
 }
