Tweaked TypeKit font to see if it looks better in IE.
Former-commit-id: a211cf10f7f9e80b25dcc3dd23a3329a100e9574
Former-commit-id: e930e1d0716bc4c4211e59f06ce0dc1300e4854d
Former-commit-id: 0d86f7b7804d0a79e6b40d7d02b85f9531a80213
Former-commit-id: f2c4aa1fd18e86b390895e25c429637c6b8baccd
Former-commit-id: 48b6197d8fde7945539f62133e4397ca0bd61bea
Former-commit-id: 4788d4f69b21c3babd19d02c41dcdcc29c4feea4

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -34,7 +34,8 @@
 .pb-body {
 	background: url(../images/pb-background.jpg) repeat-x #fff;
 	margin: 0px auto;
-	font-family: "lemonde-sans-1","lemonde-sans-2","Verdana","Arial",sans-serif;
+	font-family: "ff-dax-condensed-web-pro-1","ff-dax-condensed-web-pro-2","Verdana","Arial",sans-serif;
+	#font-family: "lemonde-sans-1","lemonde-sans-2","Verdana","Arial",sans-serif;
 	width: 995px;
 	color: #464646;
 }
