--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<!--[if IE 8]>
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8" >
+<![endif]-->
 <title>{% block headtitle %}{{ site_name }}{% endblock %}</title>
 {% block metatags %}
 <meta name="Keywords" content="audio books, audiobooks, books, novels, podcast, podcasting, podiobooks" /> 
