removed extra slash from front of js include for BookShelf.js.

--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -29,7 +29,7 @@
       parseOnLoad: true,
       isDebug: isDebug,
       baseUrl: "/",
-      modulePaths: { pbwidgets: "{{ MEDIA_URL }}/js/pbwidgets" }
+      modulePaths: { pbwidgets: "{{ MEDIA_URL }}js/pbwidgets" }
     };
 </script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js">
