Incorporated THEME_MEDIA_URL, changed to loading only dijit.css instead of dojo tundra theme.
Former-commit-id: fe0defbe75ffbd67a93357add07eb0bbc487f2b5
Former-commit-id: 250c876ce4abec6efe29fc591b0a0fcf2ce090fe
Former-commit-id: 27a214e3883eb8083d8ca88445d238282fb92e13
Former-commit-id: 1e8e48238f607832a4f7b7e5ddb60e80f9fd9b4f
Former-commit-id: 0077ed0b39db9541de76952e16a07be24962d595

--- a/src/podiobooks/templates/themes/tim1/base.html
+++ b/src/podiobooks/templates/themes/tim1/base.html
@@ -10,9 +10,8 @@
 <meta name="Keywords" content="audio books, audiobooks, books, novels, podcast, podcasting, podiobooks" /> 
 <meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
 {% endblock %}
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/clear.css" >
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}themes/tim1/css/base.css" >
-<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/tundra/tundra.css">
+<link rel="stylesheet" type="text/css" href="{{ THEME_MEDIA_URL }}css/base.css" >
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dijit/themes/dijit.css">
 {% if debug %}
 	<script type="text/javascript">
 		var isDebug = true;
