CSS tweaks to make it the button controls look good in Chrome and Safari; seems like I have to specify vertical-align-top at every layer...
Former-commit-id: c79f4ad905b6d6f73bee4ecc2a3584e35355fdda
Former-commit-id: 4ecc1d0583f931251d338931633e0510f8d03217
Former-commit-id: 62f35cab037123b0860615380d015a5b31a2d681
Former-commit-id: d3c6e299be2adcef06c39993d2dc058a1136246e
Former-commit-id: a66e03f7d9c4afbf4344663f6c4cacd4ffa36ebf
Former-commit-id: a4eac598de0a270511bdef7f6147565c41194656

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -87,7 +87,7 @@
 
 .pb-shelf-controller {
 	float: right;
-	margin: 0 3px 0 0;
+	margin: 8px 3px 0 0;
 	vertical-align: top;
 }
 
@@ -95,7 +95,7 @@
 	border: none;
 	background-color: transparent;
 	clear: all;
-	margin: 5px 0 0 4px;
+	margin: 0 0 0 4px !important;
 	vertical-align: top;
 }
 
@@ -118,7 +118,6 @@
 .pb-shelf-controller .dijitButtonContents button {
 	border: none;
 	background: transparent;
-	vertical-align: top;
 	width: 10px;
 	height: 10px;
 }
@@ -127,6 +126,11 @@
 	padding: 0;
 	border: none; 
 }
+
+.pb-shelf-controller .dijitInline {
+	vertical-align: top;
+}
+
 
 .pb-shelf-controller .pb-shelf-controller-icon {
 	background-image: url(../images/pb-shelf-controller-icons.png); 
