3rd attempt at Chrome Fix.
Former-commit-id: 1e772dffecc408b55e8adb69a1cc63131cec9512
Former-commit-id: 7804bf8ccf4bbdd78a52d86a5e0b5cb4eef4b1eb
Former-commit-id: 0ef51647ccdf6c9f9245f7fd907900d426990813
Former-commit-id: 88972ca5a7970196f4faeaa401cab820077369bc
Former-commit-id: f41a97924e2deeeffded742aea87333fc5c62f5f
Former-commit-id: 3a29e04449c3fd2846f437547688abcecf319099

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -131,7 +131,7 @@
 /* Chrome Button Padding Fix */
 @media screen and (-webkit-min-device-pixel-ratio:0) {
         /* Safari and Google Chrome only - fix margins */
-        .pb-shelf-controller .dijitButtonNode button {
+        .pb-shelf-controller .pb-shelf-controller-icon {
                 margin-top: -1px;
 				margin-left: -2px;
         }
