First cut at 3rd shelf and infobox.
Former-commit-id: 98b2273307018fe8d52c003c41b91098d3ab99e2
Former-commit-id: 52a6c16076de36750b53d348470ad0d2a6c185a1
Former-commit-id: 297dd4034993a94c9195bd022fd9b9b3e8ced9a6
Former-commit-id: e1ec54f7e23845e73b4f6610d934350a229ff5ec
Former-commit-id: b8efc7f6d2b49f27aa0a2d9c7077ccf53a8d17ca
Former-commit-id: 7939bd01143bec27d0ae2e032f2057b9daab159b

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -49,7 +49,7 @@
 
 .pb-shelf {
 	position: relative;
-	margin-bottom: 10px;
+	margin-bottom: 14px;
 	font-size: 11px;
 	text-align: left;
 	overflow: hidden;
@@ -246,13 +246,15 @@
 }
 
 .pb-infobox {
-	float: left;
-	display: inline-block;
+	float: right;
+	position: relative;
+	top: -481px;
+	margin-right: 5px;
 }
 
 .pb-infobox-left {
 	float: left;
-	height: 100px;
+	height: 463px;
 	width: 13px;
 	background: url(../images/pb-infobox-light-left.png) bottom left no-repeat;
 	cursor: pointer;
@@ -260,14 +262,14 @@
 
 .pb-infobox-middle {
 	float: left;
-	height: 100px;
-	width: 100px;
+	height: 463px;
+	width: 190px;
 	background: url(../images/pb-infobox-light-middle.png) repeat-x;
 }
 
 .pb-infobox-right {
 	float: left;
-	height: 100px;
+	height: 463px;
 	width: 13px;
 	background: url(../images/pb-infobox-light-right.png) bottom right no-repeat;
 	cursor: pointer;
