--- a/src/podiobooks/templates/themes/tim1/main/index.html
+++ b/src/podiobooks/templates/themes/tim1/main/index.html
@@ -17,4 +17,8 @@
 
 {% show_shelf 'authorSpotlightShelf' 'Author Spotlight - Mur Lafferty' contributor_title_list '' '' 'pb-shelf' 3 %}
 
+{% show_shelf 'topRatedShelf' 'Top Rated Podiobooks' toprated_title_list '' '' 'pb-shelf' 3 %}
+
+{% show_infobox 'Podiobooks.com News' 'homePageInfobox' blog_feed_entries %}
+
 {% endblock %}
