Bolded the shelf titles.
Former-commit-id: e62f28b1143016a5779223b4885a40ad1d4fc1ee
Former-commit-id: ece2f360f45a4a8028a3fadb764553e313735808
Former-commit-id: e41eceadb1e4b185f0533fe41f7e4d1335febbe6
Former-commit-id: 0db9e81ff3dbde0cdce3563324ecab2629b4cdbb
Former-commit-id: d5fa96c7bd674c63a5e41b7ceecbada0978475a0
Former-commit-id: 5037264a75ee7285a57159c46e17f5230d11450d

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -81,6 +81,7 @@
 .pb-shelf-titlebar {
 	margin: 7px 0 15px 15px;
 	font-size: 22px;
+	font-weight: bold;
 	color: #fff;
 	vertical-align: top;
 }
@@ -131,7 +132,6 @@
 .pb-shelf-controller .dijitInline {
 	vertical-align: top;
 }
-
 
 .pb-shelf-controller .pb-shelf-controller-icon {
 	background-image: url(../images/pb-shelf-controller-icons.png); 
