First cut at prettified search results page.
Former-commit-id: a63e4af533956bf95cd1e5291699a42da7be2fea
Former-commit-id: 6e435e882f29bc9065f5b9b4fbd77ee1241e4463
Former-commit-id: e495058bf8875fb7d393fed478d8b285b9df015a
Former-commit-id: 3c0a975e166257d88f09747658f6c2fe1b3c3c33
Former-commit-id: b843122600f99945f8fd5ee888545840efd7e7bb
Former-commit-id: 997ded96a77ac1b85f23d442c8f702ac8a54f446

--- a/src/podiobooks/media/themes/tim1/css/base.css
+++ b/src/podiobooks/media/themes/tim1/css/base.css
@@ -275,6 +275,15 @@
 	cursor: pointer;
 }
 
+.pb-headphones {
+	background: url(../images/pb-headphones.png) no-repeat;
+	height: 63px;
+	width: 165px;
+	text-align: center;
+	font-weight: bold;
+	margin-left: 10px;
+	padding-top: 25px;
+}
 
 /* clear the styles */
 html, body, div, span, applet, object, iframe,
