--- a/src/podiobooks/templates/themes/tim1/main/tags/show_infobox.html
+++ b/src/podiobooks/templates/themes/tim1/main/tags/show_infobox.html
@@ -3,13 +3,10 @@
     <div class="pb-infobox-left" alt="">
     </div>
     <div class="pb-infobox-middle">
-        <div style="text-align:center;">
-            <img src="{{ THEME_MEDIA_URL }}images/pb-headphones.png">
-            <div style="position: relative; top: -40px; font-weight: bold">
-                Podiobooks
-                <br>
-                News
-            </div>
+        <div class="pb-headphones">
+            Podiobooks
+            <br>
+            News
         </div>
         <div id="rssfeed" name="rssfeed" style="line-height: 1.1; margin-left: 12px; margin-top: -20px;">
             <ul style="list-style-type: circle;">
